client/src/components/QueryComponent/QueryComponent.scss
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

@import "../../theme/theme.scss";

.querylist-control {
  height: 100%;
  background-color: $backgroundColor5;
}

.qc-grid {
  display: grid;
  grid-gap: 4px;
  grid-template-rows: 35px auto;
  font-size: 12px;
  font-family: $fontFamilyMain;
  font-weight: 200;
  overflow: hidden;
  background-color: $backgroundColor5;
  padding: 40px 10px 16px 10px;
}

.qc-queryBox {
  grid-row: 1;
  grid-gap: 10px;
  grid-template-columns: 200px auto 290px;
  font-size: 12px;
  font-family: $fontFamilyMain;
  font-weight: 200;
  height: 100%;
  overflow: hidden;
  background-color: $backgroundColor5;
  column-gap: calc(100% - 500px);
}

.qc-label {
  font-size: 12px;
  font-family: $fontFamilyMain;
  font-weight: 400;
  color: white;
  height: 100%;
  grid-column: 1;
  margin: 2px;
}

.qc-query {
  grid-column: 2;
  height: 100%;
  font-size: 10px;
  font-family: $fontFamilyConsole;
  font-weight: 200;
  .ms-TextField-field {
    font-size: 14px;
    font-family: $fontFamilyConsole;
    font-weight: 400;
    background: transparent;
  }
}

.qc-queryControls {
  display: flex;
  margin-top: -36px;
  margin-right: -25px;
  align-items: center;
  width: 315px;
  position: relative;
  float: right;
  .ms-Checkbox {
    align-items: center;
    margin-right: 10px;
  }
}

.ms-TextField-fieldGroup {
  height: 32px;
  margin-top: 2px;
  border-radius: 0;
  border: 1px solid $inputOutlineColor;
  background: $inputColor;
  color: $textColorLight1;
}

.qc-queryButton {
  grid-column: 3;
  font-size: 12px;
  font-family: $fontFamilyMain;
  font-weight: 400;
  padding: 2px;
  justify-items: stretch;
  align-items: stretch;
  max-height: 100%;
  height: 100%;
}

.qc-queryPresetButton {
  font-size: 10px;
  font-family: $fontFamilyMain;
  font-weight: 200;
  color: #aaa;
  padding: 2px;
  border-color: #3d3d3d;
  background-color: $backgroundColor1;
  max-width: 100px;
  text-overflow: ellipsis;
  align-items: stretch;
  height: 100%;
}

.ms-Button-description {
  font-size: 8px;
  text-overflow: ellipsis;
}

.qc-toolbarButtons {
  height: 16px;
  font-size: 8px;
  font-weight: 200;
}

.qc-queryList {
  height: 100%;
  width: 100%;
  background-color: $backgroundColor2;
  grid-row: 2;
}

.qc-queryListWrapper {
  height: 100%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
  background-color: $backgroundColor2;
}

.qc_listItem {
  margin: 3px;
  margin-bottom: 7px;
  padding: 2px;
  background-color: $backgroundColor5;
}

.qc_listItemName_unselected {
  color: $textColorLight1;
  font-size: 12px;
  font-weight: 400;
}

.qc_listItemName_selected {
  color: $textColorDark1;
  background-color: $backgroundColor7;
  font-size: 12px;
  font-weight: 600;
}

.qc_listItemId {
  font-size: 10px;
}
.qc_listItemDesc {
  font-size: 10px;
}

.qc-loadButtons {
  height: 16px;
  font-size: 8px;
  font-weight: 200;
}

.qc-query {
  height: 0px;
  font-size: 12px;
  font-weight: 200;
}

.qc-filter input {
  font-size: 10px;
}

.qc-fileInput {
  display: none;
}

.query-save-button,
.query-button {
  border: none;
  border-radius: none;
  background: $buttonColor;
  color: black;
  font-weight: 400;
  &:hover,
  &:focus {
    background: $buttonColor;
    color: black;
  }
}

.query-save-button {
  color: #fff;
  &:hover {
    color: #fff;
  }
}
.query-button {
  width: 110px;
  margin-right: 10px;
}

.qc-save-query,
.qc-confirm-delete {
  h2 {
    font-weight: 400;
    margin-bottom: 10px;
    margin-top: 0;
  }
  .query-name-input {
    font-size: 12px;
    font-weight: 200;
    margin-bottom: 10px;
    font-family: $fontFamilyMain;
  }
  .modal-button {
    width: 100px;
    margin-right: 10px;
    color: $textColorLight1;
    font-weight: 600;
    border: none;
    &.save-button {
      background: $buttonColor;
    }
    &.cancel-button {
      background: $backgroundColor4;
      margin-right: 0;
    }
  }
}

.dropdown-option {
  display: flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;

  .close-icon {
    font-size: 14px;
    flex-shrink: 0;
    color: #0090ff;
    &:focus {
      outline: none;
    }
    &:hover {
      background: transparent;
    }
  }

  button {
    background-color: transparent;
    border: none;
  }
}

.ms-Button-flexContainer {
  width: 100%;
}

.drop-down-text-box {
  .ms-TextField-fieldGroup {
    border: none;
    margin: 0;
    height: 30px;
    &:focus {
      outline: none;
      border: none;
    }
  }
}

.ms-TextField.qc-query
.ms-TextField-wrapper {
  z-index: 2;
  position: fixed;
  margin-top: -38px;
  margin-left: 225px;
  width: calc(100% - 550px);
}

.ms-TextField--multiline
.ms-TextField-wrapper {
  z-index: 2;
  position: fixed;
  height: auto;
  margin-top: 32px;
  margin-left: 225px;
  width: calc(100% - 550px);
}

.ms-TextField--multiline
.ms-TextField-fieldGroup {
  height: auto;
}

.ms-TextField-field  {
  background: transparent;
}

